<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>autow</name>
 <version>0.0.0</version>
 <description>TODO: Package description</description>
 <maintainer email="b1ho@ucsd.edu">bbho</maintainer>
 <license>TODO: License declaration</license>

 <buildtool_depend>ament_python</buildtool_depend>

 <export>
   <build_type>ament_python</build_type>
 </export>
</package>